@@ -82,7 +82,9 @@ function workflownode_node_load($nodes, $types) {
 function workflownode_node_view($node, $view_mode, $langcode) {
   global $user;
 
+  $form = array();
   $entity_type = 'node'; // This hook is only for nodes.
+  $entity_id = $node->nid;
   $field_name = ''; // This hook is only for workflow_node.
   $entity_bundle = $node->type;
 
@@ -96,7 +98,7 @@ function workflownode_node_view($node, $view_mode, $langcode) {
     return;
   }
 
-  $field_name = ''; // An explicit var is needed.
+  // Get the current sid. $field_name is updated with relevant value.
   $current_sid = workflow_node_current_state($node, $entity_type, $field_name);
   $current_state = workflow_state_load_single($current_sid);
 
@@ -106,22 +108,17 @@ function workflownode_node_view($node, $view_mode, $langcode) {
   $node->content['workflow_current_state']['#weight'] = -99;
 
   if ($current_state && $current_state->showWidget('node', $node, '', $user, FALSE)) {
-    $form = array();
     $workflow = $current_state->getWorkflow();
-
     // Show the current state and the Workflow form to allow state changing.
     // N.B. This part is replicated in hook_node_view, workflow_tab_page, workflow_vbo.
     if ($workflow) {
       $field = _workflow_info_field($field_name, $workflow);
-      // $field = reset(_workflow_info_fields($entity, $entity_type));
-      // $field_name = $field['field_name'];
       $field_id = $field['id'];
       $instance = field_info_instance($entity_type, $field_name, $entity_bundle);
       // If no instance is found, restore the array.
       if (!is_array($instance)) {
         $instance = array();
       }
-
       if (!$field['id']) {
         // This is a Workflow Node workflow. Set widget options as in v7.x-1.2
         $field['settings']['widget']['comment'] = isset($workflow->options['comment_log_node']) ? $workflow->options['comment_log_node'] : 1; // vs. ['comment_log_tab'];
@@ -129,8 +126,9 @@ function workflownode_node_view($node, $view_mode, $langcode) {
       }
     }
 
-    // By including the nid in the form id.
-    $form = drupal_get_form('workflow_transition_form_' . $node->nid, $field, $instance, $entity_type, $node);
+    // By including the nid in the form id. For backwards compatiblity, do not add entity_type, field_id.
+    $form_id = implode('_', array('workflow_transition_form', $entity_id));
+    $form += drupal_get_form($form_id, $field, $instance, $entity_type, $node);
     $form['#weight'] = 99;
 
     $node->content['workflow'] = $form;
@@ -338,7 +336,7 @@ function _workflownode_form_alter(&$form, &$form_state, $form_id) {
 
     // Emulate a Field API interface.
     // Show the current state and the Workflow form to allow state changing.
-    // N.B. This part is replicated in hook_node_view and workflow_tab_page.
+    // N.B. This part is replicated in hook_node_view, workflow_tab_page, etc.
     if ($workflow) {
       $field = _workflow_info_field($field_name, $workflow);
       $field_name = $field['field_name'];
