@@ -625,3 +625,4 @@ Issue #2406175: Uniformed creation of form_id
 Issue #2406175: Moved WorkfowTransitionEdit to th WorkflowTransitionForm form object
 Issue #2441821: Fixed wrong link
 Issue #2441821: Fixed error
+Issue #2441821: Better determination of field_name
